<resources>
    <string name="app_name">FollowMe</string>

    //loginAct_string
    <string name="login_login">로그인</string>
    <string name="look_around_login_button">둘러보기</string>

    //signupAct_string
    <string name="signup_signup"><u>회원가입</u></string>
    <string name="find_password_signup"><u>비밀번호를 잊어버렸어요.</u></string>
    <string name="id_signup">이메일주소를 입력해주세요</string>
    <string name="id_check_signup">중복확인</string>
    <string name="password_signup">패스워드(영문,숫자,특수문자 조합 8자 이상)</string>
    <string name="password_overlap">비밀번호가 일치하지 않습니다.</string>
    <string name="password_not_overlap">비밀번호가 일치합니다.</string>
    <string name="nickname_signup">닉네임</string>
    <string name="sex_man_signup">남</string>
    <string name="sex_woman_signup">여</string>
    <string name="phone_signup">-제외하고 입력</string>
    <string name="birth_signup">생년월일</string>
    <string name="birth_signup_tv">생년월일을 선택하세요</string>
    <string name="btn_sign_signup">가입하기</string>

    //fragment_mycourse
    <string name="title_mycours">나의코스</string>
    <string name="like_mycourse">내가 찜한 코스</string>

    //fragment 모두의 코스
    <string name="title_course_reco">모두의 코스</string>
    <string name="category">카테고리</string>

    //mycourse detail
    <string name="mycourse_place">나만의 홍대투어</string>

    //mycourse_add
    <string name="mycourse_add_title">코스 추가하기</string>
    <string name="mycourse_select_date">날짜를 선택해주세요.</string>


    //mypage_string
    <string name="sign_mypage">로그인 및 회원가입</string>
    <string name="sign_text_mypage">로그인 하시고 나만의 코스를 만들어 보세요</string>
    <string name="already_sign_text_mypage">나만의 코스를 만들어보는건 어떤가요?</string>
    <string name="my_pick_place_mypage">내가 찜한 장소</string>
    <string name="my_setting_mypage">내 계정 관리</string>
    <string name="note_mypage">공지사항</string>
    <string name="version_mypage">버전</string>
    <string name="about_request_mypage">앱 문의/건의하기</string>
    <string name="question_mypage">자주 묻는 질문</string>

    //mypage_mysetting_string
    <string name="myset_title">내 계정 관리</string>
    <string name="myset_change_info">회원 정보 변경</string>
    <string name="myset_logout">로그아웃</string>
    <string name="myset_change_dt">회원탈퇴</string>

    //mypage_mypick_string
    <string name="mypick_title">내가 찜한 장소</string>


    //dialog
    <string name="course_category_title">카테고리</string>
    <string name="category_string">카테고리는 하나만 선택 가능해요!</string>
    <string name="course_category_lovers">연인과 함께</string>
    <string name="course_category_friends">친구와 함께</string>
    <string name="course_category_family">가족과 함께</string>
    <string name="course_category_child">아이와 함께</string>
    <string name="course_category_alone">혼자서 여유롭게</string>
    <string name="course_category_pet">애완동물과 함께</string>
    <string name="course_category_tv">TV출연 맛집</string>
    <string name="course_category_anni">기념일</string>
    <string name="course_category_ex">이색체험</string>
    <string name="course_category_rain">비오는 날</string>
    <string name="course_category_out">나들이 가기 좋은날</string>
    <string name="course_category_act">활동적인</string>

    //fg_search
    <string name="fg_search_contents_1">#맛있는녀석들 출현 특집</string>
    <string name="fg_search_contents_2">#가성비 갑 분식</string>
    <string name="mycourse_select_category">테마를 선택해주세요.</string>
    <string name="enter_the_three_place">장소 3개를 입력해주세요.</string>
    <string name="add_title">제목을 입력해주세요</string>
</resources>

