<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="360dp"
    android:layout_height="460dp"
    android:background="@drawable/bg_dialog_category">
    
    <TextView
        android:id="@+id/tv_dialog_course_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_category_title"
        android:textStyle="bold"
        android:textSize="23sp"
        android:layout_marginTop="12.8dp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_dialog_category_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category_string"
        android:textSize="14sp"
        android:textColor="#000000"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_course_category"
        app:layout_constraintEnd_toEndOf="parent"/>

    <GridLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:columnCount="3"
        android:rowCount="4"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_category_string"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:useDefaultMargins="true"
        android:alignmentMode ="alignBounds">

        <Button
            android:id="@+id/btn_course_category_lovers"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_lovers"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_friends"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_friends"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_family"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_family"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_child"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_child"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_alone"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_alone"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_pet"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_pet"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_tv"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_tv"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_anni"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_anni"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_ex"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_ex"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_rain"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_rain"
            android:textSize="14sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_out"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_out"
            android:textSize="12sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/btn_course_category_act"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:background="@drawable/login_edittext_round_box"
            android:text="@string/course_category_act"
            android:textSize="14sp"
            android:textColor="#000000"/>


    </GridLayout>
    
    <Button
        android:id="@+id/btn_course_dialog_close"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="닫기"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_btn_dialog_category"/>




</androidx.constraintlayout.widget.ConstraintLayout>