<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_login_act"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.LoginActivity">


    <!--follow me-->
        <ImageView
            android:id="@+id/tv_title_login_img"
            android:layout_centerHorizontal="true"
            android:layout_width="89dp"
            android:layout_height="92dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/logo_followme_img"
            />
    <ImageView
        android:id="@+id/tv_title_login_act"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/follow_me"
        android:layout_below="@id/tv_title_login_img"/>

    <!--editText-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title_login_act"
        android:layout_marginHorizontal="56dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <!--아이디-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:background="@drawable/login_edittext_round_box">

            <EditText
                android:id="@+id/et_id_login_act"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="@string/id_signup"
                android:inputType="textShortMessage"
                android:textColorHint="#cecece"
                android:textSize="14sp"
                />
        </RelativeLayout>

        <!--패스워드-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_edittext_round_box">

            <EditText
                android:id="@+id/et_pw_login_act"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="@null"
                android:hint="@string/password_signup"
                android:inputType="textPassword"
                android:textColorHint="#cecece"
                android:textSize="14sp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <!--회원가입-->
            <TextView
                android:id="@+id/btn_signup_login_act"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_signup"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />

            <!--비밀번호를 잊어버렸어요.-->
            <TextView
                android:id="@+id/btn_find_password_login_act"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/find_password_signup"
                android:textColor="@color/colorBlack"
                android:textSize="12sp" />


        </RelativeLayout>


        <!--로그인-->

        <RelativeLayout
            android:id="@+id/btn_login_act"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/signup_button_box">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_login"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_look_login_act"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/look_login_button_box">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/look_around_login_button"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="@color/colorGrayLogin" />

        <!--카카오톡 로그인 이미지 대체-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp">

           <com.kakao.usermgmt.LoginButton
               android:id="@+id/btn_kakao_login_act"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               />

        </RelativeLayout>

        <!--구글로 로그인-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>
