<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_mycourse_add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mycourse.MycourseAddActivity">

    <!--Toolbar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_toolbar_add_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mycourse_add_title"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_close_course_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/btn_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorMain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_toolbar_add_course">

        <TextView
            android:id="@+id/tv_add_course"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_three_place"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_add_course_link_place"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_dialog_category_selected"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_course"
            >

            <ImageView
                android:id="@+id/img_search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_search"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/et_add_course"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/mycourse_add_title"
                app:layout_constraintStart_toEndOf="@+id/img_search_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@null"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_add_course_link_place"
            >

            <TextView
                android:id="@+id/tv_first_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="첫번째 가게 이름 : "
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_first_store_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="추가해주세요."
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_first_store_name"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_second_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="두번째 가게 이름 : "
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_store_name" />

            <TextView
                android:id="@+id/tv_second_store_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="추가해주세요."
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_second_store_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_first_store_name" />

            <TextView
                android:id="@+id/tv_third_store_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="세번째 가게 이름 : "
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_second_store_name" />

            <TextView
                android:id="@+id/tv_third_store_name_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="추가해주세요."
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_third_store_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_second_store_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_course_name" />

        <EditText
            android:id="@+id/et_add_title"
            android:layout_width="378dp"
            android:layout_height="43dp"
            android:layout_marginTop="8dp"
            android:hint="제목 입력 창입니다."
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_title" />

        <TextView
            android:id="@+id/tv_add_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mycourse_select_date"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_add_title" />


        <EditText
            android:id="@+id/et_add_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="날짜는 2020-09-24 형식으로 입력해주세요."
            android:layout_marginTop="8dp"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_date"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tv_add_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/et_add_date"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mycourse_select_category"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/img_icon_select_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="4dp"
                android:paddingVertical="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_category"
                android:src="@drawable/icon_outlined_action_main_filter"
                />

            <TextView
                android:id="@+id/select_thema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="테마는 하나만 선택 가능합니다."
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_category" />


            <ImageView
                android:id="@+id/img_btn_add_my_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/btn_add_mycourse"
                android:layout_marginTop="36dp"
                android:padding="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/select_thema"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_place"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_add_course_link_place"
            android:background="@color/colorWhite"
            android:visibility="invisible"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>